Fixed text styling and overall spacing

--- a/src/components/slices/color-picker.module.scss
+++ b/src/components/slices/color-picker.module.scss
@@ -6,7 +6,10 @@
   justify-content: center;
   align-items: center;
   background-color: $color-white;
-  padding: 50px 0px;
+  padding: 55px 10px;
+  @media (min-width: $tablet) {
+    padding: 75px 0px;
+  }
 }
 
 .colors {
@@ -18,7 +21,7 @@
 }
 
 .colorCircle {
-  width: 166px;
+  width: 175px;
   height: auto;
   aspect-ratio: 1/1;
   border-radius: 99em;
@@ -27,10 +30,13 @@
 .titleText {
   p {
     font-family: $font-secondary;
-    font-size: 1.5em;
+    font-size: 1.15em;
     text-transform: uppercase;
     font-weight: 600;
     letter-spacing: 0.13em;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
+    @media (min-width: $tablet) {
+      font-size: 1.5em;
+    }
   }
 }
